Opened 8 years ago
Closed 8 years ago
#11659 closed bug (fixed)
Debugger is single instance
Reported by: | pulkomandy | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
It is not possible to have 2 debugger sessions running. This creates a few problems:
- It is not possible to debug 2 related apps (a client and a server for example)
- When an app crashes, and you try to click "debug" in debug_server alert, if Debugger is already running the existing window is activated. This is not useful. The "debugged" program stays there waiting for something to happen.
Change History (3)
comment:1 by , 8 years ago
comment:2 by , 8 years ago
With regards to your first problem, if you start Debugger without any parameters, the Teams window will allow you to either attach to multiple teams, or start several (i.e. your client and server). What's currently missing is a way to invoke that window if you already started Debugger with a team in mind via the command line, will need to add that. The second problem I'll need to look into as stated, though I can't promise it will be before the weekend.
Note:
See TracTickets
for help on using tickets.
Debugger is single instance because it can handle multiple teams from a single instance. Will need to look into it, because the described situations definitely worked in the past.