Debugger: Cleanups.

General:
- Move all smaller prompt/edit windows to a dedicated subfolder.

Debugger/TeamsWindow/StartTeamWindow:
- Move management of StartTeamWindow to application, rather than
  Teams window.

TeamWindow:
- Add top level menu item for commands that aren't specific to the
  current team. This currently consists of requesting that the
  Teams window be shown, and directly starting a new team.

Fixes part of #11659 (no way to start additional teams if Debugger was
initially started with a specific team).