src/apps/debugger/user_interface/gui/teams_window/TeamsWindow.h
@@ -14,7 +14,6 @@ class BListView;
 class BFile;
 class BMessage;
 class SettingsManager;
-class StartTeamWindow;
 class TeamsListView;
 
 class TeamsWindow : public BWindow {
@@ -38,7 +37,6 @@ private:
 private:
 			team_id				fCurrentTeam;
 			TeamsListView*		fTeamsListView;
-			StartTeamWindow*	fStartTeamWindow;
 			BButton*			fAttachTeamButton;
 			BButton*			fCreateTeamButton;
 			SettingsManager*	fSettingsManager;
